[ADDED] Base para la autenticación

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/authmvc?serverTimezone=UTC
+spring.datasource.username=raul-ga
+spring.datasource.password=mediatuhermana
