--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ieatit?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=WARSO93ter
+spring.datasource.password=CONTRASEÑA
